Add reproduce steps  README.md